// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/debug js should return the correct output 1`] = `
"
          Based on the description of your problem, you can get to the root of it using a debugger. Learning how to track down problems like this is an inevitable part of being a developer.
<https://developers.google.com/web/tools/chrome-devtools/javascript>
        "
`;

exports[`/debug rb should return the correct output 1`] = `
"
          Based on the description of your problem, you can get to the root of it using a debugger. Learning how to track down problems like this is an inevitable part of being a developer. 
<https://www.theodinproject.com/courses/ruby-programming/lessons/debugging#debugging-with-pry-byebug>
        "
`;

exports[`/debug should return the correct output 1`] = `
Object {
  "author": null,
  "color": 13407555,
  "description": "Based on the description of your problem, you can get to the root of it using a debugger. Learning how to track down problems like this is an inevitable part of being a developer.",
  "fields": Array [
    Object {
      "inline": false,
      "name": "Javascript",
      "value": "https://developers.google.com/web/tools/chrome-devtools/javascript",
    },
    Object {
      "inline": false,
      "name": "Ruby",
      "value": "https://www.theodinproject.com/courses/ruby-programming/lessons/debugging#debugging-with-pry-byebug",
    },
  ],
  "footer": null,
  "image": null,
  "thumbnail": null,
  "timestamp": null,
  "title": "DEBUGGING",
  "type": "rich",
  "url": "https://en.wikipedia.org/wiki/Debugging",
}
`;
